# wine-vbscript-test

./: .gitignore  README.md  meson.build
.github/workflows/: c.yml
src/: def.c  def.h  main.c  scriptsite.c  scriptsite.h  utils.c  utils.h
standalone/inc/wine/: wine.c
standalone/inc/wine/dlls/vbscript/: compile.c  lex.c  parser.tab.c  parser.tab.h  parser.y  vbscript_main.c
subprojects/: zlog.wrap
test/: TestVBScript.c
